css/style.css
* {
    margin: 0;
    padding: 0;
    
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
         -o-box-sizing: border-box;
            box-sizing: border-box;
}

body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 13px;
    line-height: 21px;
    color: #222;
}

body#home {
    background-image: url('../i/bg.png');
}

#wrapper {
    min-width: 972px;
    width: 100%;
    height: 100%;
}

#info {
    width: 460px;
    padding: 60px 20px 20px;
    background-color: rgba(0,0,0,0.035);
    font-size: 16px;
    line-height: 24px;
    text-shadow: 1px 1px 0 rgba(255,255,255,0.5);
    color: #222;
    letter-spacing: 0.5px;
    position: fixed;
    top: 0;
    left: 20px;
    z-index: 99;
    
    -webkit-border-radius: 0 0 5px 5px;
       -moz-border-radius: 0 0 5px 5px;
         -o-border-radius: 0 0 5px 5px;
            border-radius: 0 0 5px 5px;
}

ol#options {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: #549FDC;
}

#info p {
    margin: 0 0 24px 0;
}

#info p:last-child {
    margin: 0;
}

#tab {
    position: fixed;
    top: 0;
    left: 40px;
    padding: 5px 0;
    background-color: #222;
    border-radius: 0 0 5px 5px;
    z-index: 100;
}

#tab a {
    text-decoration: none;
    color: #fff;
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 0.5px;
    padding: 5px 10px;
    text-shadow: none;
}

body#create,
body#signed {
    overflow-y: hidden;
}

body#create #info,
body#signed #info {
    background-color: rgba(240,240,240,0.9);
}

/*
body#create #wrapper {
    background-color: #7b7b7b;
}
*/

body#create .subWrap {
    width: 972px;
    height: 3472px;
    background-image: url('../i/create.gif');
    margin: 0 auto;
    position: relative;
}

body#create.done .subWrap {
    background-image: url('../i/create2.gif');
}

body#create .subWrap .signIn {
    position: absolute;
    right: 6px;
    top: 224px;
    width: 165px;
    height: 22px;
}

body#create .subWrap .signedin {
    color: #004276;
    font-weight: bold;
    white-space: nowrap;
    text-overflow: ellipsis;
}

body#create .subWrap .signIn a,
body#signed .subWrap .signIn a {
    outline: none;
}

body#signed .subWrap {
    width: 972px;
    height: 3472px;
    background-image: url('../i/signin.gif');
    background-repeat: no-repeat;
    margin: 0 auto;
    position: relative;
}

body#signed.done .subWrap {
    background-image: url('../i/signin2.gif');
}

body#signed #wrapper {
    background-image: url('../i/signinblock.gif');
    background-repeat: repeat-x;
}

body#signed.done #wrapper {
    background-image: url('../i/signinblock2.gif');
}

body#signed .subWrap .signIn {
    position: absolute;
    right: 102px;
    top: 270px;
    width: 165px;
    height: 22px;
}

body#signed.done .subWrap .signIn {
    right: 60px;
    top: 25px;
}

body#signed.done .subWrap .signedin {
    color: #B9BBBC;
    font-weight: bold;
    white-space: nowrap;
    text-overflow: ellipsis;
}

